<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@drawable/bg_gradient">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="150dp"
        android:textSize="40dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username: "
            android:textSize="20dp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/login_username_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Username Here"
            android:backgroundTint="#00000F"
            android:textColorHint="#000000"
            android:textColor="#000000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password: "
            android:textSize="20dp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/login_password_edt"
            android:layout_width="wrap_content"
            android:inputType="textPassword"
            android:layout_height="50dp"
            android:hint="Enter Password Here"
            android:backgroundTint="#000000"
            android:textColorHint="#000000"
            android:textColor="#000000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="Login"
            android:textSize="20sp"
            android:backgroundTint="#074887"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

    </LinearLayout>

    <!-- Add a TextView here for displaying the message -->
    <TextView
        android:id="@+id/login_message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to the Login Page!"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>