<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <EditText
        android:id="@+id/etSymbol"
        android:hint="Enter Symbol (e.g., AAPL)"
        android:layout_width="match_parent"
        android:backgroundTint="#000000"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etFrom"
        android:hint="From Date (yyyy-MM-dd)"
        android:layout_width="match_parent"
        android:backgroundTint="#000000"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etTo"
        android:hint="To Date (yyyy-MM-dd)"
        android:layout_width="match_parent"
        android:backgroundTint="#000000"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnFetch"
        android:backgroundTint="#074887"
        android:text="Fetch Stock Data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
